--- a/Resources/views/Test/index.html.twig
+++ b/Resources/views/Test/index.html.twig
@@ -1,11 +1,11 @@
 <html>
 <head>
-
+{{ ruian_seo_title() }}
+{{ ruian_seo_metas() }}
 </head>
 <body>
     <p>
         Hello world i'm a test.
-        {{ ruian_seo() }}
     </p>
 </body>
 </html>
